tests/transpiler/x/zig/slice.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:58 +0000
const std = @import("std");

pub fn main() void {
    try std.io.getStdOut().writer().print("{any}\n", .{[_]i64{1, 2, 3}[1..3]});
    try std.io.getStdOut().writer().print("{any}\n", .{[_]i64{1, 2, 3}[0..2]});
    try std.io.getStdOut().writer().print("{any}\n", .{"hello"[1..4]});
}
